Fix - Align between icon & text in navigation

--- a/front/src/app/file/navbar/navbar.component.scss
+++ b/front/src/app/file/navbar/navbar.component.scss
@@ -108,7 +108,7 @@
                     display: block;
                     min-width: 60px;
                     height: 60px;
-                    line-height: 60px;
+                    line-height: 75px;
                     text-align: center;
 
                     ion-icon {
@@ -121,7 +121,7 @@
                     display: block;
                     padding-left: 10px;
                     height: 60px;
-                    line-height: 47px;
+                    line-height: 60px;
                     white-space: normal;
                 }
             }
